[tool.poetry]
name = "vsapy"
version = "0.7.0"
description = "Vector Symbolic Architecture(VSA) library that allows building VSA apps that use various flavours of VSA vectors."
authors = ["Chris Simpkin"]
license = "MIT"
homepage = "https://github.com/vsapy/vsapy"
repository = "https://github.com/vsapy/vsapy"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.4"
nltk = "^3.7"
Pillow = "^9.1.1"
pandas = "^1.4.2"
python-dateutil = "^2.8.2"
regex = "^2022.4.24"
scipy = "^1.8.1"
setuptools = "^62.3.2"
six = "^1.16.0"
unicodedata2 = "^14.0.0"
wheel = "^0.37.1"
gmpy2 = "^2.1.2"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
