[tool.poetry]
readme = "README.md"
name = "vsapy"
version = "0.10.0rc1"
description = "Vector Symbolic Architecture(VSA) library that allows building VSA apps that use various flavours of VSA vectors."
authors = ["Chris Simpkin"]
license = "MIT"
homepage = "https://github.com/vsapy/vsapy"
repository = "https://github.com/vsapy/vsapy"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

numpy = "^1.26.4"
scipy = "^1.17.0"
pandas = "^2.3.3"

Pillow = "^12.1.0"
matplotlib = "^3.10.8"
scikit-image = "^0.26.0"

nltk = "^3.9.2"
regex = "^2026.1.15"
gmpy2 = "^2.2.0"

python-dateutil = "^2.9.0"
xmltodict = "^0.13.0"
colorama = "^0.4.6"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
